[package]
name = "card_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.35"
pcsc = "2.8.2"
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
futures-util = "0.3"
serde_json = "1.0.132"
serde = {version = "1.0.209", features = ['derive']}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true  # Removes debug symbols
